Added Slimes + Textures

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <canvas id="canvas" width="960" height="540" style="border:3px solid #000000;"></canvas> 
 </body>
 
+<img id="0" src="Tile0.jpg">
+<img id="1" src="Tile1.jpg">
+<img id="2" src="Tile3.png">
+<img id="3" src="Tile4.png">
+<img id="4" src="Tile5.png">
+<img id="5" src="Tile6.png">
+<img id="6" src="Slime1.png">
+<img id="7" src="Slime2.png">
+<img id="8" src="Slime3.png">
+<img id="9" src="Slime4.png">
+<img id="10" src="Slime5.png">
+<img id="11" src="Slime6.png">
+<img id="12" src="Slime7.png">
+<img id="13" src="Slime8.png">
+<img id="14" src="Slime9.png">
+<img id="15" src="Player.png">
+<img id="16" src="Tile7.png">
+<img id="17" src="Tile8.png">
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
