--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <img id="15" src="Player.png">
 <img id="16" src="Tile7.png">
 <img id="17" src="Tile8.png">
+<img id="18" src="Player1.png">
+<img id="19" src="Player2.png">
+<img id="20" src="Player3.png">
+<img id="21" src="Player4.png">
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
