Added weapon use animation

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <img id="19" src="Player2.png">
 <img id="20" src="Player3.png">
 <img id="21" src="Player4.png">
+<img id="22" src="Sword1.png">
+<img id="23" src="Sword2.png">
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
