Added player reflection,coin drop and coin animation

--- a/index.html
+++ b/index.html
@@ -9,30 +9,51 @@
     <canvas id="canvas" width="960" height="540" style="border:3px solid #000000;"></canvas> 
 </body>
 
-<img id="0" src="Tile0.jpg">
-<img id="1" src="Tile1.jpg">
-<img id="2" src="Tile3.png">
-<img id="3" src="Tile4.png">
-<img id="4" src="Tile5.png">
-<img id="5" src="Tile6.png">
-<img id="6" src="Slime1.png">
-<img id="7" src="Slime2.png">
-<img id="8" src="Slime3.png">
-<img id="9" src="Slime4.png">
-<img id="10" src="Slime5.png">
-<img id="11" src="Slime6.png">
-<img id="12" src="Slime7.png">
-<img id="13" src="Slime8.png">
-<img id="14" src="Slime9.png">
-<img id="15" src="Player.png">
-<img id="16" src="Tile7.png">
-<img id="17" src="Tile8.png">
-<img id="18" src="Player1.png">
-<img id="19" src="Player2.png">
-<img id="20" src="Player3.png">
-<img id="21" src="Player4.png">
-<img id="22" src="Sword1.png">
-<img id="23" src="Sword2.png">
+<img id="backgroundTile" src="Tile0.png">
+<img id="floorMiddle" src="Tile1.jpg">
+<img id="floorLeft" src="Tile3.png">
+<img id="floorRight" src="Tile4.png">
+<img id="wallLeft" src="Tile5.png">
+<img id="wallRight" src="Tile6.png">
+<img id="wallRightB1" src="Tile6B1.png">
+<img id="wallRightB2" src="Tile6B2.png">
+<img id="wallRightB3" src="Tile6B3.png">
+<img id="wallRightB4" src="Tile6B4.png">
+<img id="wallRightB5" src="Tile6B3.png">
+<img id="wallRightB6" src="Tile6B2.png">
+<img id="mirrorRight" src="Tile7.png">
+<img id="mirrorLeft" src="Tile8.png">
+<img id="backgroundTileB" src="Tile9.png">
+<img id="backgroundTileC" src="Tile10.png">
+<img id="backgroundTileD" src="Tile11.png">
+<img id="backgroundTileE" src="Tile12.png">
+
+<img id="smallNormal" src="Slime1.png">
+<img id="smallHit" src="Slime2.png">
+<img id="smallDead" src="Slime3.png">
+<img id="mediumNormal" src="Slime4.png">
+<img id="mediumHit" src="Slime5.png">
+<img id="mediumDead" src="Slime6.png">
+<img id="largeNormal" src="Slime7.png">
+<img id="largeHit" src="Slime8.png">
+<img id="largeDead" src="Slime9.png">
+
+<img id="playerFrame1" src="Player1.png">
+<img id="playerFrame2" src="Player2.png">
+<img id="playerFrame3" src="Player3.png">
+<img id="playerFrame4" src="Player4.png">
+<img id="playerReflection" src="PlayerReflection.png">
+
+<img id="sword1" src="Sword1.png">
+<img id="sword2" src="Sword2.png">
+
+<img id="coin1" src="Coin1.png">
+<img id="coin2" src="Coin2.png">
+<img id="coin3" src="Coin3.png">
+<img id="coin4" src="Coin4.png">
+<img id="coin5" src="Coin3.png">
+<img id="coin6" src="Coin2.png">
+
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
