Added selected item and inventory display

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 <img id="coin5" src="Coin3.png">
 <img id="coin6" src="Coin2.png">
 
+<img id="item1" src="Item1.png">
+<img id="item2" src="Item2.png">
+<img id="item3" src="Item3.png">
+
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
