Changed slime and coin textures

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <img id="item1" src="Item1.png">
 <img id="item2" src="Item2.png">
 <img id="item3" src="Item3.png">
+<img id="item4" src="Item4.png">
 
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
