Added shop logic, textures and interface

--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
 <img id="item3" src="Item3.png">
 <img id="item4" src="Item4.png">
 
+<img id="shop1" src="Shop1.png">
+<img id="shop2" src="Shop2.png">
+<img id="shop3" src="Shop3.png">
+<img id="shop4" src="Shop4.png">
+<img id="shop5" src="Shop5.png">
+<img id="shop6" src="Shop6.png">
+<img id="shop7" src="Shop7.png">
+
+<img id="shopBG" src="ShopBackground1.png">
+<img id="shopEl" src="ShopElement1.png">
+
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
