Added background music

--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
 <script type="text/javascript" src="Music.js"></script>
+<script type="text/javascript" src="MirroriaBG.js"></script>
 <script type="text/javascript" src="Main.js"></script>
 </html>
