--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <img id="backgroundTile" src="Tile0.png">
 <img id="floorMiddle" src="Tile1.jpg">
+<img id="floorMiddleShop" src="Tile1Shop.png">
 <img id="floorLeft" src="Tile3.png">
 <img id="floorRight" src="Tile4.png">
 <img id="wallLeft" src="Tile5.png">
