--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
 <img id="playerFrame4" src="Player4.png">
 <img id="playerReflection" src="PlayerReflection.png">
 
+<img id="sword0" src="Sword0.png">
 <img id="sword1" src="Sword1.png">
 <img id="sword2" src="Sword2.png">
+<img id="sword3" src="Sword3.png">
+<img id="sword4" src="Sword4.png">
+<img id="sword5" src="Sword5.png">
+<img id="sword6" src="Sword6.png">
 
 <img id="coin1" src="Coin1.png">
 <img id="coin2" src="Coin2.png">
