Partially added boss logic

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 <img id="backgroundTileC" src="Tile10.png">
 <img id="backgroundTileD" src="Tile11.png">
 <img id="backgroundTileE" src="Tile12.png">
+<img id="transTile1" src="Tile12.png">
+<img id="transTile2" src="Tile12.png">
+<img id="transTile3" src="Tile12.png">
+<img id="transTile4" src="Tile12.png">
+<img id="transTile5" src="Tile12.png">
+<img id="transTile6" src="Tile12.png">
 
 <img id="smallNormal" src="Slime1.png">
 <img id="smallHit" src="Slime2.png">
@@ -38,6 +44,10 @@
 <img id="largeNormal" src="Slime7.png">
 <img id="largeHit" src="Slime8.png">
 <img id="largeDead" src="Slime9.png">
+
+<img id="bossNormal" src="Boss1.png">
+<img id="bossHit" src="Boss1.png">
+<img id="bossDead" src="Boss1.png">
 
 <img id="playerFrame1" src="Player1.png">
 <img id="playerFrame2" src="Player2.png">
