Added boss level logic and respawn point logic

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 <img id="TB4" src="Textures/Transmitter/TransmitterBase4.png">
 <img id="TB5" src="Textures/Transmitter/TransmitterBase5.png">
 
+<img id="TBOverlay" src="Textures/Transmitter/TransmitterDamaged.png">
+
 
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
