Added Animation objects, explosions, and various sound effects.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
 <img id="TB4" src="Textures/Transmitter/TransmitterBase4.png">
 <img id="TB5" src="Textures/Transmitter/TransmitterBase5.png">
 
+<img id="TBDes" src="Textures/Transmitter/TransmitterBaseDead.png">
 <img id="TBOverlay" src="Textures/Transmitter/TransmitterDamaged.png">
+
+<img id="Exp1" src="Textures/Explosion/Exp1.png">
+<img id="Exp2" src="Textures/Explosion/Exp2.png">
+<img id="Exp3" src="Textures/Explosion/Exp3.png">
+
+<img id="MirroriaImg" src="Textures/Other/Mirroria.png">
 
 
 <script type="text/javascript" src="utils.js"></script>
