Added dialogue and ending sequence

--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
 <img id="Exp3" src="Textures/Explosion/Exp3.png">
 
 <img id="MirroriaImg" src="Textures/Other/Mirroria.png">
+<img id="EndImg" src="Textures/Other/THP.png">
+
+<img id="Cloud" src="Textures/Other/Cloud.png">
+<img id="Background" src="Textures/Other/Background.png">
+
+<img id="End1" src="Textures/Other/EndFrame1.png">
+<img id="End2" src="Textures/Other/EndFrame2.png">
+<img id="End3" src="Textures/Other/EndFrame3.png">
+<img id="End4" src="Textures/Other/EndFrame4.png">
+<img id="End5" src="Textures/Other/EndFrame5.png">
+<img id="End6" src="Textures/Other/EndFrame6.png">
+<img id="End7" src="Textures/Other/EndFrame71.png">
+<img id="End8" src="Textures/Other/EndFrame8.png">
+<img id="End9" src="Textures/Other/EndFrame9.png">
+<img id="End10" src="Textures/Other/EndFrame10.png">
 
 
 <script type="text/javascript" src="utils.js"></script>
