--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <img id="largeHit" src="Textures/Slimes/Slime8.png">
 <img id="largeDead" src="Textures/Slimes/Slime9.png">
 
-<img id="bossNormal" src="Boss1.png">
-<img id="bossHit" src="Boss1.png">
-<img id="bossDead" src="Boss1.png">
+<img id="bossNormal" src="Textures/Other/Boss1.png">
+<img id="bossHit" src="Textures/Other/Boss1.png">
+<img id="bossDead" src="Textures/Other/Boss1.png">
 
 <img id="playerFrame1" src="Textures/Player/Player1.png">
 <img id="playerFrame2" src="Textures/Player/Player2.png">
@@ -116,6 +116,7 @@
 <img id="End9" src="Textures/Other/EndFrame9.png">
 <img id="End10" src="Textures/Other/EndFrame10.png">
 
+<!--
 
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
@@ -123,4 +124,8 @@
 <script type="text/javascript" src="Music.js"></script>
 <script type="text/javascript" src="MirroriaBG.js"></script>
 <script type="text/javascript" src="Main.js"></script>
+
+-->
+
+<script type="text/javascript" src="Aggregate.js"></script>
 </html>
