--- a/index.html
+++ b/index.html
@@ -3,129 +3,19 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <head>
-    <title>Mirroria</title>
+    <title>GC</title>
 </head>
 <body>
     <canvas id="canvas" width="960" height="540" style="border:3px solid #000000;"></canvas> 
 </body>
 
-<img id="backgroundTile" src="Textures/Tiles/Tile0.png">
-<img id="floorMiddle" src="Textures/Tiles/Tile1.jpg">
-<img id="floorMiddleShop" src="Textures/Tiles/Tile1Shop.png">
-<img id="floorLeft" src="Textures/Tiles/Tile3.png">
-<img id="floorRight" src="Textures/Tiles/Tile4.png">
-<img id="wallLeft" src="Textures/Tiles/Tile5.png">
-<img id="wallRight" src="Textures/Tiles/Tile6.png">
-<img id="wallRightB1" src="Textures/Tiles/Tile6B1.png">
-<img id="wallRightB2" src="Textures/Tiles/Tile6B2.png">
-<img id="wallRightB3" src="Textures/Tiles/Tile6B3.png">
-<img id="wallRightB4" src="Textures/Tiles/Tile6B4.png">
-<img id="wallRightB5" src="Textures/Tiles/Tile6B3.png">
-<img id="wallRightB6" src="Textures/Tiles/Tile6B2.png">
-<img id="mirrorRight" src="Textures/Tiles/Tile7.png">
-<img id="mirrorLeft" src="Textures/Tiles/Tile8.png">
-<img id="backgroundTileB" src="Textures/Tiles/Tile9.png">
-<img id="backgroundTileC" src="Textures/Tiles/Tile10.png">
-<img id="backgroundTileD" src="Textures/Tiles/Tile11.png">
-<img id="backgroundTileE" src="Textures/Tiles/Tile12.png">
-<img id="transTile1" src="Textures/Tiles/Tile12.png">
-<img id="transTile2" src="Textures/Tiles/Tile12.png">
-<img id="transTile3" src="Textures/Tiles/Tile12.png">
-<img id="transTile4" src="Textures/Tiles/Tile12.png">
-<img id="transTile5" src="Textures/Tiles/Tile12.png">
-<img id="transTile6" src="Textures/Tiles/Tile12.png">
-
-<img id="smallNormal" src="Textures/Slimes/Slime1.png">
-<img id="smallHit" src="Textures/Slimes/Slime2.png">
-<img id="smallDead" src="Textures/Slimes/Slime3.png">
-<img id="mediumNormal" src="Textures/Slimes/Slime4.png">
-<img id="mediumHit" src="Textures/Slimes/Slime5.png">
-<img id="mediumDead" src="Textures/Slimes/Slime6.png">
-<img id="largeNormal" src="Textures/Slimes/Slime7.png">
-<img id="largeHit" src="Textures/Slimes/Slime8.png">
-<img id="largeDead" src="Textures/Slimes/Slime9.png">
-
-<img id="bossNormal" src="Textures/Other/Boss1.png">
-<img id="bossHit" src="Textures/Other/Boss1.png">
-<img id="bossDead" src="Textures/Other/Boss1.png">
-
-<img id="playerFrame1" src="Textures/Player/Player1.png">
-<img id="playerFrame2" src="Textures/Player/Player2.png">
-<img id="playerFrame3" src="Textures/Player/Player3.png">
-<img id="playerFrame4" src="Textures/Player/Player4.png">
-<img id="playerReflection" src="Textures/Player/PlayerReflection.png">
-
-<img id="sword0" src="Textures/Swords/Sword0.png">
-<img id="sword1" src="Textures/Swords/Sword1.png">
-<img id="sword2" src="Textures/Swords/Sword2.png">
-<img id="sword3" src="Textures/Swords/Sword3.png">
-<img id="sword4" src="Textures/Swords/Sword4.png">
-<img id="sword5" src="Textures/Swords/Sword5.png">
-<img id="sword6" src="Textures/Swords/Sword6.png">
-
-<img id="coin1" src="Textures/Coin/Coin1.png">
-<img id="coin2" src="Textures/Coin/Coin2.png">
-<img id="coin3" src="Textures/Coin/Coin3.png">
-<img id="coin4" src="Textures/Coin/Coin4.png">
-<img id="coin5" src="Textures/Coin/Coin3.png">
-<img id="coin6" src="Textures/Coin/Coin2.png">
-
-<img id="item1" src="Textures/Items/Item1.png">
-<img id="item2" src="Textures/Items/Item2.png">
-<img id="item3" src="Textures/Items/Item3.png">
-<img id="item4" src="Textures/Items/Item4.png">
-
-<img id="shop1" src="Textures/Shop/Shop1.png">
-<img id="shop2" src="Textures/Shop/Shop2.png">
-<img id="shop3" src="Textures/Shop/Shop3.png">
-<img id="shop4" src="Textures/Shop/Shop4.png">
-<img id="shop5" src="Textures/Shop/Shop5.png">
-<img id="shop6" src="Textures/Shop/Shop6.png">
-<img id="shop7" src="Textures/Shop/Shop7.png">
-
-<img id="shopBG" src="Textures/Shop/ShopBackground1.png">
-<img id="shopEl" src="Textures/Shop/ShopElement1.png">
-
-<img id="TB1" src="Textures/Transmitter/TransmitterBase1.png">
-<img id="TB2" src="Textures/Transmitter/TransmitterBase2.png">
-<img id="TB3" src="Textures/Transmitter/TransmitterBase3.png">
-<img id="TB4" src="Textures/Transmitter/TransmitterBase4.png">
-<img id="TB5" src="Textures/Transmitter/TransmitterBase5.png">
-
-<img id="TBDes" src="Textures/Transmitter/TransmitterBaseDead.png">
-<img id="TBOverlay" src="Textures/Transmitter/TransmitterDamaged.png">
-
-<img id="Exp1" src="Textures/Explosion/Exp1.png">
-<img id="Exp2" src="Textures/Explosion/Exp2.png">
-<img id="Exp3" src="Textures/Explosion/Exp3.png">
-
-<img id="MirroriaImg" src="Textures/Other/Mirroria.png">
-<img id="EndImg" src="Textures/Other/THP.png">
-
-<img id="Cloud" src="Textures/Other/Cloud.png">
-<img id="Background" src="Textures/Other/Background.png">
-
-<img id="End1" src="Textures/Other/EndFrame1.png">
-<img id="End2" src="Textures/Other/EndFrame2.png">
-<img id="End3" src="Textures/Other/EndFrame3.png">
-<img id="End4" src="Textures/Other/EndFrame4.png">
-<img id="End5" src="Textures/Other/EndFrame5.png">
-<img id="End6" src="Textures/Other/EndFrame6.png">
-<img id="End7" src="Textures/Other/EndFrame71.png">
-<img id="End8" src="Textures/Other/EndFrame8.png">
-<img id="End9" src="Textures/Other/EndFrame9.png">
-<img id="End10" src="Textures/Other/EndFrame10.png">
-
-<!--
 
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
 <script type="text/javascript" src="Music.js"></script>
-<script type="text/javascript" src="MirroriaBG.js"></script>
+<script type="text/javascript" src="BGMusic.js"></script>
 <script type="text/javascript" src="Main.js"></script>
-
--->
 
 <script type="text/javascript" src="Aggregate.js"></script>
 </html>
