--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <canvas id="canvas" width="960" height="540" style="border:3px solid #000000;"></canvas> 
 </body>
 
-
+<script type="text/javascript" src="GameObject.js"></script>
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
