--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>GC</title>
 </head>
 <body>
-    <canvas id="canvas" width="960" height="540" style="border:3px solid #000000;"></canvas> 
+    <canvas id="canvas" width="960" height="540" ></canvas> 
 </body>
 
 <script type="text/javascript" src="GameObject.js"></script>
 <script type="text/javascript" src="utils.js"></script>
+<script type="text/javascript" src="Turret.js"></script>
 <script type="text/javascript" src="GameState.js"></script>
 <script type="text/javascript" src="Input.js"></script>
 <script type="text/javascript" src="Music.js"></script>
