--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <canvas id="canvas" width="960" height="540" ></canvas> 
 </body>
 
+
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+
 <script type="text/javascript" src="GameObject.js"></script>
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="Turret.js"></script>
@@ -17,6 +20,4 @@
 <script type="text/javascript" src="Music.js"></script>
 <script type="text/javascript" src="BGMusic.js"></script>
 <script type="text/javascript" src="Main.js"></script>
-
-<script type="text/javascript" src="Aggregate.js"></script>
 </html>
